Fixed previous bug
Fixed previous bug by making the toggleGridOutline its own class.

New bug is that the toggleGrid holder is not showing the correct state when the menu is re-entered

--- a/src/Visualizer/VisualizerSandbox.css
+++ b/src/Visualizer/VisualizerSandbox.css
@@ -16,6 +16,14 @@ body {
   z-index: 1;
 }
 
+.toggle-grid-holder {
+  position: absolute;
+  top: 60px;
+  right: 10px;
+  opacity: 80%;
+  z-index: 1;
+}
+
 .text-info {
   /* background-color: #c7365f; */
   font-family: QTYPE;
